tests/rosetta/out/Haskell/assertions.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/assertions.hs:17:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/assertions.hs:10:1
                 /workspace/mochi/tests/rosetta/out/Haskell/assertions.hs:17:1
   |
17 | main = do
   | ^^^^
