tests/rosetta/out/Haskell/assertions.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:31:24Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.Maybe (fromMaybe)

main :: ()
main =
  fromMaybe (()) $
    (let x = 43 in if (_asInt (x) /= 42) then (let _ = putStrLn ("Assertion failed") in Nothing) else (let _ = putStrLn ("Assertion passed") in Nothing))
  where
    x = 43

main :: IO ()
main = do
  main
